tests/paczka2/big_fuzzy/25540556.err
Error in line 23: hmqTSLZ A292 66,8
Error in line 26: iP4UYrqJS A292 49,5
Error in line 33: iP4UYrqJS A471 51,4
Error in line 39: 1jkV A435 34,8
Error in line 40: 1jkV A292 76,4
Error in line 47: JCJVJ6 A435 61,5
Error in line 58: igta A471 21,8
Error in line 61: I0MsET A471 29,89
Error in line 64: hmqTSLZ A292 
Error in line 65: 6,9
Error in line 59: igta A435 28,7
Error in line 48: hmqTSLZ S74 78,1
Error in line 76: 1jkV A435 28,9
Error in line 74: hmqTSLZ A292 208,6
Error in line 84: JCJVJ6 A435 47,7
Error in line 93: 1jkV A435 52,3
Error in line 95: JCJVJ6+A292+93,4
Error in line 91: JCJVJ6 A471 18,8
Error in line 102: JCJVJ6 A435 25,50
Error in line 103: igtaA292213,4
Error in line 98: iP4UYrqJS A471 34,7
Error in line 101: igta A292 48,6
Error in line 104: iP4UYrqJS S74 12,7
Error in line 114: I0MsET A471 194,0
Error in line 116: I0MsET S74 15,3
Error in line 108: igta A471 8,2
Error in line 118: I0MsET A435 88,3
Error in line 124: I0MsET A292 92,2
Error in line 127: I0MsET A435 58,0
Error in line 135: igta A471 64,0
Error in line 128: JCJVJ6 A435 117,4
Error in line 145: iP4UYrqJS A292 6,9
Error in line 157: I0MsET A292 O0,9
Error in line 149: iP4UYrqJS A471 18,4
Error in line 160: iP4UYrqJS A292 40,9
Error in line 161: JCJVJ6 A292 23,8
Error in line 174: I0MsET A292 229,6
Error in line 181: A471 A471 27,5
Error in line 183: hmqTSLZ S74 68,2
Error in line 185: iP4UYrqJS A471 41,8
Error in line 170: igta S74 86,5
Error in line 196: JCJVJ6 A292 34,4
Error in line 179: 1jkV A435 3,8
Error in line 208: 1jkV S74 53,3
Error in line 213: hmqTSLZ S74 19,5
Error in line 215: JCJVJ6 A292 -4,4
Error in line 212: 1jkV A471 12,8
Error in line 214: hmqTSLZ A435 65,4
Error in line 221: iP4UYrqJS A435 36,9
Error in line 204: JCJVJ6 A292 71,2
Error in line 236: I0MsET A292 76,2
Error in line 241: JCJVJ6 A471 207,44
Error in line 243: igta A471 56,0
